[package]
name = "anonymizer-e2e"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"
tempfile = "3.10.1"
tracing = "0.1"
tracing-subscriber = "0.1"

miden-client = { version = "0.9", default-features = false, features = ["sqlite", "tonic", "testing"] }
miden-objects = { version = "0.9", default-features = false }
miden-lib = { version = "0.9", default-features = false }
miden-tx = { version = "0.9", default-features = false }
miden-stdlib = { version = "0.9", default-features = false }
miden-assembly = { version = "0.15", default-features = false }
miden-processor = { version = "0.15", default-features = false }